--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,3 +32,5 @@ jobs:
         run: |
           pytest -vv
           pytest --cov --cov-fail-under=90
+      - name: Lint python
+        run: ruff check --output-format=github .
